--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,7 +4,10 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.2.8"
+    "@kanishk44/medium-common-kanishk": "^1.0.0",
+    "@prisma/extension-accelerate": "^1.0.0",
+    "hono": "^4.2.8",
+    "prisma": "^5.13.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240403.0",
